# bencode-rs

./: CHANGELOG.md  Cargo.toml  README.md
benches/: json.rs  load.rs
data/: deep.benc  int.benc  list.benc  max_depth.benc  nested.benc  really_deep.benc  simple.benc  test.benc  torrent.benc
src/: json.rs  lib.rs  parser.rs  tests.rs  value.rs
