[package]
name = "bencode"
version = "0.8.0"
authors = ["Mark Nokalt <marknokalt@live.com>"]
license = "MIT OR Apache-2.0"
description = "Parser and API for working bencode data"
keywords = ["parser", "parsing", "bencode"]
repository = "https://github.com/manokara/bencode-rs"
categories = ["parsing"]
edition = "2018"

[features]
json = ["nanoserde"]

[dependencies]
nanoserde = { version = "0.1.20", optional = true }

[dev-dependencies]
criterion = "0.3"
maplit = "1.0"

[[bench]]
name = "load"
harness = false
