[package]
name = "bencode"
version = "0.7.0"
authors = ["Mark Nokalt <marknokalt@live.com>"]
license = "MIT OR Apache-2.0"
description = "Parser and API for working bencode data"
keywords = ["parser", "parsing", "bencode"]
repository = "https://github.com/manokara/bencode-rs"
categories = ["parsing"]
edition = "2018"

[features]
json = ["nanoserde"]

[dependencies]
nanoserde = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.3"
maplit = "1.0"
nanoserde = "0.1"

[[bench]]
name = "load"
harness = false

[[bench]]
name = "json"
harness = false
required-features = ["json"]